homework5, exp not done yet

--- a/homework4/homework4.tex
+++ b/homework4/homework4.tex
@@ -148,7 +148,7 @@ p_0p_1p_3 + p_1p_2p_3 > p_0p_2p_3 + p_0p_1p_2 \implies p_0p_3(p_2-p_1) < p_1p_2(
 
 \textbf{证明可能的线裁剪个数为m的指数函数}
 
-可能的线裁剪个数$\mbox{num}$满足$2^m < \mbox{num} < 3^m$。其中$2^m$的极端情况是考虑一个在图片边缘上的像素$a_{i, 0}$, 以这个像素为结尾的线个数为$l_{i, 0} = l_{i-1, 0} + l_{i-1, 1}$。事实上这个松下界可以进一步放紧, 考虑计算以第$i$行元素为结尾的线个数$l_{i, *}$, 有$l_{i, *} = 3 \times l_{i-1,*} - l_{i-1,0} - l_{i-1,n-1} \geq 3 \times l_{i-1,*} - \frac{2}{n}l_{i-1,*} = (3-\frac{2}{n})l_{i-1,*}$, 即$l_{m-1, *}\geq (3-\frac{2}{n})^{m-1}n$。由上可知$\mbox{num}$为一个$m$的指数函数。
+以第$m$行每个点为结尾可能的线裁剪个数$l_{m, i}$满足$2^m < l_{m, i} < 3^m$, 总的线裁剪个数满足$n2^m < l_{m, *} < n3^m$。其中$2^m$的极端情况是考虑一个在图片边缘上的像素$a_{i, 0}$, 以这个像素为结尾的线个数为$l_{i, 0} = l_{i-1, 0} + l_{i-1, 1}$。事实上这个松下界可以进一步放紧, 考虑计算以第$i$行元素为结尾的线个数$l_{i, *}$, 有$l_{i, *} = 3 \times l_{i-1,*} - l_{i-1,0} - l_{i-1,n-1} \geq 3 \times l_{i-1,*} - \frac{2}{n}l_{i-1,*} = (3-\frac{2}{n})l_{i-1,*}$, 即$l_{m-1, *}\geq (3-\frac{2}{n})^{m-1}n$。由上可知$\mbox{num}$为一个$m$ 的指数函数。
 
 \section {线裁剪实验报告}
 
@@ -182,7 +182,9 @@ p_0p_1p_3 + p_1p_2p_3 > p_0p_2p_3 + p_0p_1p_2 \implies p_0p_3(p_2-p_1) < p_1p_2(
 \item 定义较小规模的子问题: 规模为$i$的子问题$Q_{i,j}$为: 求解以$i$行$j$列的元素为结尾的裁剪线$l_{i,j}$。
 \item 从小规模$i$的子问题合成规模为$i+1$的问题: 对于$Q_{i+1,j}$, $cost(l_{i,j}) = \min_{\delta=-1}^{\delta=1}{cost(i, j + \delta)} + d(i, j)$, 同时$j$加上对应的$\delta$即为$l_{i+1,j}$这条线在第$i$行的列坐标。
 \end{enumerate}
-从问题规模为0的问题自底向上构建该表格, 设原图大小为$m \times n$。每行子问题的计算需要$\Theta(n)$, 总复杂度为$\Theta(mn)$。作业要求中要求将原图裁剪到$\frac{m}{2} x \frac{n}{2}$。如果用线裁剪方法, 算法复杂度为$\Theta(mn^2) + \Theta(nm^2) = \Theta(mn(m+n))$。
+从问题规模为0的问题自底向上构建该表格, 设原图大小为$m \times n$。每行子问题的计算需要$\Theta(n)$, 总复杂度为$\Theta(mn)$。
+
+作业要求中要求将原图裁剪到$\frac{m}{2} x \frac{n}{2}$。如果用线裁剪方法, 算法复杂度为$\Theta(mn^2) + \Theta(nm^2) = \Theta(mn(m+n))$。
 
 进行一次列方向线裁剪的动态规划算法如~\ref{algorithm:3}所示, 其中$\mbox{im}$为大小为$m \times n$的输入图片, $d(im, x, y)$为该图片的第$x$行第$y$列像素的cost。
 \begin{algorithm}[ht]
