exp for homework5

--- a/homework5/p2_3_4/homework5.tex
+++ b/homework5/p2_3_4/homework5.tex
@@ -138,7 +138,7 @@ T(n) = T(n/2) + \Theta(n)
 \]
 显然根据主定理, 在这种特殊情况下, 该算法的复杂度为$\Theta(n \log(n))$。通过与线性时间找顺序统计量的算法类似的推导, 可以知道此算法在一般情况下的复杂度也为$\Theta(n)$。
 
-算法伪代码如~\hyperref[algo:backpack]{BACKPACK}所示。
+算法伪代码如~\hyperref[algo:backpack]{BACKPACK}所示(在本文档的最后)。
 
 \begin{algorithm}[ht]
   \caption{BACKPACK-SOLVE(v, w, W)}
@@ -179,7 +179,7 @@ T(n) = T(n/2) + \Theta(n)
 
 \textbf{16.3-7. 推广霍夫曼算法, 使之能生成三进制的码字(即码字由符号0、1、2组成), 并证明你的算法能生成最优三进制码。}
 
-算法的伪代码描述如~\hyperref[algo:huffman]{HUFFMAN}所示。
+算法的伪代码描述如~\hyperref[algo:huffman]{HUFFMAN}所示(在本文档的最后)。
 \begin{algorithm}[ht]
   \caption{HUFFMAN(C)}
   \label{algo:huffman}
@@ -249,7 +249,7 @@ T(n) = T(n/2) + \Theta(n)
   make && ./main <input-file-name>
 \end{lstlisting}
 
-测试脚本, 随作业上交的也有已经生成好的一些测试数据和相应脚本, 可以用于测试运行速度。运行:
+随作业上交了测试脚本\textit{test.py}, 可以用于测试运行速度。运行:
 \begin{lstlisting}[language=bash]
   python test.py
 \end{lstlisting}
@@ -266,21 +266,40 @@ l_{i+1} =
 \end{cases}
 \]
 
-此问题显然可以用$\Theta(n^2)$的复杂度求解。但是要求用$\Theta(n \log(n))$求解, 即要求递推步骤能用$\Theta(\log(n))$的复杂度完成。观察到, 我们其实不需要记下$i+1$之前的每个元素$a_k$作为结尾能得到的最长递增子字符串的长度$l_k$, 因为递推过程只需要找到比$a_{i+1}$元素小的元素里$l_k$最大的那个元素即可。我们可以对每个$l$, 记录下使得以$a_k$结尾的最长递增子序列长度$l_k = l$的$a_k$中最小的一个, 得到$END$列表。 $END$列表是一个有序列表, $END_i \leq END_{i+1}$, 这是因为如果一个元素$a_k$可以作为一个长度为$l_k$的最长递增子序列的结尾时, 其一定也可以作为一个长度为$l_ k - 1$的递增子序列的结尾。 每次只需要从后往前搜这个列表$END$, 找到第一个小于当前元素$a_{i+1}$的元素$a_k$, 其下标为$l_k$, 就可以知道$l_{i+1} = l_k + 1$。这个搜索过程显然可以用二分搜索进行优化, 就可以用$\Theta(\log(n))$的复杂度完成递推过程。接下来的问题就只在要维护该$END$表的这个"记录$l_k = l$的最小$a_k$"的性质了, 这个当然不是问题。
+此问题显然可以用$\Theta(n^2)$的复杂度求解。但是要求用$\Theta(n \log(n))$求解, 即要求递推步骤能用$\Theta(\log(n))$的复杂度完成。
+
+观察到, 我们其实不需要记下$i+1$之前的每个元素$a_k$作为结尾能得到的最长递增子字符串的长度$l_k$, 因为递推过程只需要找到比$a_{i+1}$元素小的元素里$l_k$最大的那个元素即可。我们可以对每个$l$, 记录下使得以$a_k$结尾的最长递增子序列长度$l_k = l$的$a_k$中最小的一个, 得到$END$列表。 $END$列表是一个有序列表, $END_i \leq END_{i+1}$, 这是因为如果一个元素$a_k$可以作为一个长度为$l_k$的最长递增子序列的结尾时, 其一定也可以作为一个长度为$l_ k - 1$的递增子序列的结尾。 每次只需要从后往前搜这个列表$END$, 找到第一个小于当前元素$a_{i+1}$的元素$a_k$, 其下标为$l_k$, 就可以知道$l_{i+1} = l_k + 1$。这个搜索过程显然可以用二分搜索进行优化, 就可以用$\Theta(\log(n))$的复杂度完成递推过程。接下来的问题就只在要维护该$END$表的这个"记录$l_k = l$的最小$a_k$"的性质了, 这个当然不是问题。
 
 \subsection{代码}
-代码如\hyperref[pic:1]{图}所示, 就当伪代码看吧... 其中$end$为前面算法描述中提到的$END$数组; $end_index$记录当前$END$数组里每个对应位置的元素在原数组中的位置; $way$数组记录每个元素作为递增子字符串中的一个元素时, 其上一个元素的下标。
+代码如\hyperref[pic:1]{图}所示, 就当伪代码看吧... 其中$end$为前面算法描述中提到的$END$数组; $end\_index$记录当前$END$数组里每个对应位置的元素在原数组中的位置; $way$数组记录每个元素作为递增子字符串中的一个元素时, 其上一个元素在原数组中的的下标。
 
 \begin{figure}
   \centering%
-  \includegraphics[height=4cm]{code}
+  \includegraphics[height=16cm]{code}
   \label{pic:1}
 \end{figure}
 
 \subsection{实验效果}
-下面是用\textit{test.py}脚本测试的概算的运行时间随着输入数据规模的增长图, 其中输入数据为随机生成的$[0, N * 0.4]$范围内的整数。
+下面是用\textit{test.py}脚本测试的概算的运行时间随着输入数据规模的增长表格, 其中输入数据为随机生成的$[0, N * 0.4]$范围内的整数。
 
+\begin{center}
+\begin{tabular}{ c | c | c }
+  输入规模 & 运行时间(ms) & $\frac{\mbox{time}}{n\log(n)}$ \\
+  5 & 0.011 & 0.00136693685603\\
+  10 & 0.016 & 0.000694871171045\\
+  50 & 0.05 & 0.000255622218635\\
+  100 & 0.093 & 0.000201946934085\\
+  500 & 0.408 & 0.000131303533075\\
+  1000 & 0.793 & 0.00011479850805\\
+  5000 & 3.286 & 7.71615701593e-05\\
+  10000 & 3.33 & 3.61550156184e-05\\
+  50000 & 18.552 & 3.42927544583e-05\\
+  100000 & 39.473 & 3.42858121683e-05\\
+  500000 & 212.65 & 3.24103202882e-05\\
+  1000000 & 529.868 & 3.83531247562e-05
+\end{tabular}
+\end{center}
 
-
+在数据量适中的时候, 即输入规模$N$在1万到100万的时候, 算法复杂度很明显与$n\log(n)$接近。在实验中, 发现$N$在增大时, 算法复杂度相对于$\Theta(n\log(n))$有一定提升, 这可能是由于缓存效率导致的。
 
 \end{document}
