作业8又水了...

--- a/homework6/homework6.tex
+++ b/homework6/homework6.tex
@@ -40,7 +40,7 @@
 \usepackage[noend]{algpseudocode}
 \algnewcommand\Break{\textbf{break}}
 
-\usepackage{scrextend}
+\usepackage{scrextend} % for addmargin
 \usepackage{subcaption}
 \graphicspath{{p3/}}
 %\usepackage{algorithmic}
